[package]
authors = ['PureStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'Unlicense'
name = 'moonbeam-primitives'
repository = 'https://github.com/PureStake/moonbeam/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = []

